ExperimentStatus now logs endtime of entire experiment orchestration, webui displays end_time and color codes experiment status

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -38,9 +38,23 @@
             {% for exp in data.experiment_status %}
             <tr>
                 {% for key,value in exp.items() %}
-                <td>
-                    {{ value }}
-                </td>
+                    {% if value == 'running' %}
+                        <td style='color:yellow;'>
+                            {{ value }}
+                        </td>
+                    {% elif value == 'completed' %}
+                        <td style='color:green;'>
+                            {{ value }}
+                        </td>
+                    {% elif value == 'failed' %}
+                        <td style='color:red;'>
+                            {{ value }}
+                        </td>
+                    {% else %}
+                        <td>
+                            {{ value }}
+                        </td>
+                    {% endif %}
                 {% endfor %}
             </tr>
             {% endfor %}
