fixed a typo in the webui..

--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -18,7 +18,7 @@
         </pre>
 
         <p>
-            This page automatically refreshses everey {{ data.refresh_interval }} seconds.
+            This page automatically refreshses every {{ data.refresh_interval }} seconds.
         </p>
 
 
