changed some colors in the webui to make it easier to read..

--- a/webserver/templates/experiment_status_table.html
+++ b/webserver/templates/experiment_status_table.html
@@ -27,7 +27,7 @@
                     {{ value }}
                 </td>
             {% elif value == 'provisioning' %}
-                <td style='color:blue;'>
+                <td style='color:aqua'>
                     {{ value }}
                 </td>
             {% elif value == 'destroying' %}
