--- a/webserver/templates/index.html
+++ b/webserver/templates/index.html
@@ -3,7 +3,11 @@
         <!-- <meta http-equiv="refresh" content=" {{ data.refresh_interval }} "> -->
         <style>
             th, td {
-                border:1px solid black;
+                border:1px solid #efefef;
+            }
+            body {
+                color: #efefef;
+                background-color: #282C36;
             }
         </style>
         <title>
